cmake_minimum_required(VERSION 3.15)
project(data_structure_408)

set(CMAKE_CXX_STANDARD 11)

# basic_Capture2
#add_executable(data_structure_408 basis/single_linklist.cpp)
#add_executable(data_structure_408 basis/double_linklist.cpp)
#add_executable(data_structure_408 basis/circular_single_linklist.cpp)
#add_executable(data_structure_408 basis/circular_double_linklist.cpp)
#add_executable(data_structure_408 basis/static_link_list.cpp)
#add_executable(data_structure_408 basis/sequential_static_list.cpp)
#add_executable(data_structure_408 basis/sequential_dynamic_list.cpp)

# wangdao
#add_executable(data_structure_408 wangdao/Chapter2.2.cpp)
add_executable(data_structure_408 wangdao/Chapter2.3.cpp)