cmake_minimum_required(VERSION 3.15)
project(data_structure_408)

set(CMAKE_CXX_STANDARD 11)

# basic_Capture2
#add_executable(data_structure_408 basis/single_linklist.cpp)
#add_executable(data_structure_408 basis/double_linklist.cpp)
#add_executable(data_structure_408 basis/circular_single_linklist.cpp)
#add_executable(data_structure_408 basis/circular_double_linklist.cpp)
#add_executable(data_structure_408 basis/static_link_list.cpp)
#add_executable(data_structure_408 basis/sequential_static_list.cpp)
#add_executable(data_structure_408 basis/sequential_dynamic_list.cpp)
#add_executable(data_structure_408 basis/sequential_stack.cpp)
#add_executable(data_structure_408 basis/link_stack.cpp)
#add_executable(data_structure_408 basis/share_stack.cpp)
#add_executable(data_structure_408 basis/sequential_queue.cpp)
#add_executable(data_structure_408 basis/link_queue.cpp)
add_executable(data_structure_408 basis/stack_bracket.cpp)

# wangdao
#add_executable(data_structure_408 wangdao/Chapter2.2.cpp)
#add_executable(data_structure_408 "wangdao/Chapter2.3(1-16&&21-25).cpp")
#add_executable(data_structure_408 "wangdao/Chapter2.3(17).cpp")
#add_executable(data_structure_408 "wangdao/Chapter2.3(18-19).cpp")
#add_executable(data_structure_408 "wangdao/Chapter2.3(20).cpp")
add_executable(data_structure_408 "wangdao/Chapter3.1.cpp")
#add_executable(data_structure_408 "wangdao/Chapter3.1(4).cpp")
#add_executable(data_structure_408 "wangdao/Chapter3.2.cpp")