cmake_minimum_required(VERSION 3.15)
project(data_structure_408)

set(CMAKE_CXX_STANDARD 11)

# basic_Capture2
#add_executable(data_structure_408 basis/single_linklist.cpp)
#add_executable(data_structure_408 basis/double_linklist.cpp)
#add_executable(data_structure_408 basis/circular_single_linklist.cpp)
#add_executable(data_structure_408 basis/circular_double_linklist.cpp)
#add_executable(data_structure_408 basis/static_link_list.cpp)
#add_executable(data_structure_408 basis/sequential_static_list.cpp)
#add_executable(data_structure_408 basis/sequential_dynamic_list.cpp)
#add_executable(data_structure_408 basis/sequential_stack.cpp)
#add_executable(data_structure_408 basis/link_stack.cpp)
#add_executable(data_structure_408 basis/share_stack.cpp)
#add_executable(data_structure_408 basis/sequential_queue.cpp)
#add_executable(data_structure_408 basis/link_queue.cpp)
#add_executable(data_structure_408 basis/stack_bracket.cpp)
#add_executable(data_structure_408 basis/string_static.cpp)
#add_executable(data_structure_408 basis/bitree_traverse.cpp)
#add_executable(data_structure_408 basis/thread_bitree.cpp)
#add_executable(data_structure_408 basis/binary_sort_tree.cpp)
#add_executable(data_structure_408 basis/mgraph_undirected.cpp)
#add_executable(data_structure_408 basis/mgraph_directed.cpp)
#add_executable(data_structure_408 basis/algraph_undirected.cpp)
add_executable(data_structure_408 basis/algraph_directed.cpp)

# wangdao
#add_executable(data_structure_408 wangdao/Chapter2.2.cpp)
#add_executable(data_structure_408 "wangdao/Chapter2.3(1-16&&21-25).cpp")
#add_executable(data_structure_408 "wangdao/Chapter2.3(17).cpp")
#add_executable(data_structure_408 "wangdao/Chapter2.3(18-19).cpp")
#add_executable(data_structure_408 "wangdao/Chapter2.3(20).cpp")
#add_executable(data_structure_408 "wangdao/Chapter3.1.cpp")
#add_executable(data_structure_408 "wangdao/Chapter3.1(4).cpp")
#add_executable(data_structure_408 "wangdao/Chapter3.2.cpp")
#add_executable(data_structure_408 "wangdao/Chapter3.3(2-3).cpp")
#add_executable(data_structure_408 "wangdao/Chapter3.3(4).cpp")
#add_executable(data_structure_408 "wangdao/Chapter5.3_1-17_19-20.cpp")
#add_executable(data_structure_408 "wangdao/Chapter5.3(18).cpp")
#add_executable(data_structure_408 "wangdao/Chapter5.4.cpp")
#add_executable(data_structure_408 "wangdao/Chapter5.5.cpp")
#add_executable(data_structure_408 "wangdao/Chapter6.2.cpp")

# test
#add_executable(data_structure_408 test.cpp)